<?xml version="1.0"?>
<package format="2">
  <name>fanuc_driver</name>
  <version>1.0.0</version>
  <description>Contains driver stack code for interfacing with Fanuc robots</description>
  <maintainer email="wwerst@misorobotics.com">Will Werst</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/MisoRobotics/fanuc-hmi-jointstreaming.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>

  <exec_depend>control_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <test_depend>roslaunch</test_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
